[gd_scene load_steps=16 format=3 uid="uid://fl7doikqcmtx"]

[ext_resource type="Script" path="res://scenes/player/player_big.gd" id="1_cyjvj"]
[ext_resource type="Texture2D" uid="uid://biuyakvnvmvt8" path="res://assets/big_character.png" id="2_wkbgv"]
[ext_resource type="PackedScene" uid="uid://cori8mavh40yt" path="res://scenes/player/collision_polygon_big_player.tscn" id="3_v04q2"]

[sub_resource type="Animation" id="Animation_o53pk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadPunch/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -16.25)]
}

[sub_resource type="Animation" id="Animation_vndpv"]
resource_name = "breaking"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadPunch/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -15.625)]
}

[sub_resource type="Animation" id="Animation_f1mm0"]
resource_name = "duck"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadPunch/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -6)]
}

[sub_resource type="Animation" id="Animation_rlra8"]
resource_name = "falling"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadPunch/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -15.625)]
}

[sub_resource type="Animation" id="Animation_btbd1"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadPunch/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -15.625)]
}

[sub_resource type="Animation" id="Animation_jc0td"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadPunch/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -15.625)]
}

[sub_resource type="Animation" id="Animation_yptv2"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadPunch/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -15.625)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svh1g"]
_data = {
"RESET": SubResource("Animation_o53pk"),
"breaking": SubResource("Animation_vndpv"),
"duck": SubResource("Animation_f1mm0"),
"falling": SubResource("Animation_rlra8"),
"idle": SubResource("Animation_btbd1"),
"jump": SubResource("Animation_jc0td"),
"walk": SubResource("Animation_yptv2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4268"]
size = Vector2(7, 3.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhiyf"]
size = Vector2(13, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6rm0"]
size = Vector2(13, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aowbo"]
size = Vector2(3, 19)

[node name="PlayerBig" type="CharacterBody2D"]
position = Vector2(99, 359)
script = ExtResource("1_cyjvj")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="CollisionPolygon2D" parent="." instance=ExtResource("3_v04q2")]
z_index = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
texture_repeat = 1
position = Vector2(0, -6)
texture = ExtResource("2_wkbgv")
hframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_svh1g")
}

[node name="HeadPunch" type="Area2D" parent="."]
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadPunch"]
position = Vector2(-0.5, -16.25)
shape = SubResource("RectangleShape2D_n4268")

[node name="FootStomp" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FootStomp"]
position = Vector2(-0.5, 7.5)
shape = SubResource("RectangleShape2D_nhiyf")

[node name="BodyArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
position = Vector2(-0.5, -6)
shape = SubResource("RectangleShape2D_l6rm0")

[node name="DuckCheck" type="Area2D" parent="."]
z_index = 1
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DuckCheck"]
position = Vector2(-0.5, -6.5)
shape = SubResource("RectangleShape2D_aowbo")

[connection signal="body_entered" from="HeadPunch" to="." method="_on_head_punch_body_entered"]
[connection signal="body_entered" from="FootStomp" to="." method="_on_foot_stomp_body_entered"]
[connection signal="body_entered" from="BodyArea" to="." method="_on_body_area_body_entered"]
[connection signal="body_exited" from="BodyArea" to="." method="_on_body_area_body_exited"]
[connection signal="body_entered" from="DuckCheck" to="." method="_on_duck_check_body_entered"]
[connection signal="body_exited" from="DuckCheck" to="." method="_on_duck_check_body_exited"]
